Use 17-jammy for eclipse-temurin